・タイムアウトエラー参考追加 ・クエリ整理

--- a/DB/SQLServer/構造関係/インデックスの比較.md
+++ b/DB/SQLServer/構造関係/インデックスの比較.md
@@ -204,6 +204,62 @@ WHERE
     OR [DstTable].[SchemaName] IS NULL
 ```
 
+``` sql
+
+EXEC('
+SELECT
+    *
+FROM
+    (
+        SELECT
+            S.name AS SchemaName,
+            O.name AS ObjectName,
+            I.name AS IndexName,
+            I.type_desc AS IndexTypeDesc,
+            I.is_primary_key AS IsPrimaryKey,
+            I.is_unique AS IsUnique,
+            I.is_disabled AS IsDisabled
+        FROM
+            ' + @SourceDataBaseName + '.sys.indexes AS I
+               INNER JOIN ' + @SourceDataBaseName + '.sys.objects AS O
+                  ON I.object_id = O.object_id
+               INNER JOIN ' + @SourceDataBaseName + '.sys.schemas AS S
+                  ON O.schema_id = S.schema_id
+        WHERE
+            I.index_id > 0
+            AND O.is_ms_shipped = 0
+    ) AS [SrcTable]
+    FULL JOIN
+        (
+        SELECT
+            S.name AS SchemaName,
+            O.name AS ObjectName,
+            I.name AS IndexName,
+            I.type_desc AS IndexTypeDesc,
+            I.is_primary_key AS IsPrimaryKey,
+            I.is_unique AS IsUnique,
+            I.is_disabled AS IsDisabled
+        FROM
+            ' + @TargetDataBaseName + '.sys.indexes AS I
+               INNER JOIN ' + @TargetDataBaseName + '.sys.objects AS O
+                  ON I.object_id = O.object_id
+               INNER JOIN ' + @TargetDataBaseName + '.sys.schemas AS S
+                  ON O.schema_id = S.schema_id
+        WHERE
+            I.index_id > 0
+            AND O.is_ms_shipped = 0
+    ) AS [DstTable]
+        ON
+        [SrcTable].SchemaName = [DstTable].SchemaName
+        AND [SrcTable].ObjectName = [DstTable].ObjectName
+        AND [SrcTable].IndexName = [DstTable].IndexName
+        AND [SrcTable].IndexTypeDesc = [DstTable].IndexTypeDesc
+WHERE
+    [SrcTable].[SchemaName] IS NULL
+    OR [DstTable].[SchemaName] IS NULL
+')
+```
+
 ---
 
 ## 実験
@@ -257,6 +313,73 @@ FROM
         AND SoSource.type = SoDestination.type COLLATE database_default 
 ORDER BY 
     isnull(SoSource.type,SoDestination.type)
+```
+
+``` sql
+SELECT
+    *,
+    STUFF((
+            SELECT
+                ', ' + sys.all_columns.name + CASE
+                    WHEN is_descending_key = 1 THEN ' - DESC'
+                    ELSE ''
+                END
+            FROM
+                sys.index_columns
+                JOIN
+                    sys.all_columns
+                ON  sys.index_columns.object_id = sys.all_columns.object_id
+                AND sys.index_columns.column_id = sys.all_columns.column_id
+            WHERE
+                sys.index_columns.object_id = sys.indexes.object_id
+            AND sys.index_columns.index_id = sys.indexes.index_id
+            AND is_included_column = 0 FOR XML PATH(''),
+                TYPE
+        ).value('.', 'VARCHAR(MAX)'), 1, 2, '') AS IndexKeys,
+    STUFF((
+            SELECT
+                ', ' + sys.all_columns.name + CASE
+                    WHEN is_descending_key = 1 THEN ' - DESC'
+                    ELSE ''
+                END
+            FROM
+                sys.index_columns
+                JOIN
+                    sys.all_columns
+                ON  sys.index_columns.object_id = sys.all_columns.object_id
+                AND sys.index_columns.column_id = sys.all_columns.column_id
+            WHERE
+                sys.index_columns.object_id = sys.indexes.object_id
+            AND sys.index_columns.index_id = sys.indexes.index_id
+            AND is_included_column = 1 FOR XML PATH(''),
+                TYPE
+        ).value('.', 'VARCHAR(MAX)'), 1, 2, '') AS IncludedColumns
+FROM
+    sys.indexes
+    INNER JOIN sys.objects AS O
+        ON sys.indexes.object_id = O.object_id
+WHERE
+    index_id > 0
+    AND is_ms_shipped = 0
+
+
+SELECT
+    S.name AS SchemaName,
+    O.name AS ObjectName,
+    I.name AS IndexName,
+    I.type_desc AS IndexTypeDesc,
+    I.is_primary_key AS IsPrimaryKey,
+    I.is_unique AS IsUnique,
+    I.is_disabled AS IsDisabled
+FROM
+    sys.indexes AS I
+        INNER JOIN sys.objects AS O
+            ON I.object_id = O.object_id
+        INNER JOIN sys.schemas AS S
+            ON O.schema_id = S.schema_id
+WHERE
+    I.index_id > 0
+    AND O.is_ms_shipped = 0
 ```
 
 [index - Compare Indexes/Constraints between two SQL Server databases - Database Administrators Stack Exchange](https://dba.stackexchange.com/questions/76997/compare-indexes-constraints-between-two-sql-server-databases)  
