--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -47,6 +47,7 @@ Error Number:-2,State:0,Class:11
   - [SqlConnection.ConnectionTimeout プロパティ (System.Data.SqlClient) | Microsoft Learn](https://learn.microsoft.com/ja-jp/dotnet/api/system.data.sqlclient.sqlconnection.connectiontimeout?view=dotnet-plat-ext-7.0)  
   - [SQL Server / SQL Database パフォーマンスチューニング & トラブルシューティング シリーズ : SQL Server へのクエリ実行時の「コマンド タイムアウト」の挙動について at SE の雑記](https://blog.engineer-memo.com/2020/06/30/sql-server-sql-database-%E3%83%91%E3%83%95%E3%82%A9%E3%83%BC%E3%83%9E%E3%83%B3%E3%82%B9%E3%83%81%E3%83%A5%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E3%83%88%E3%83%A9%E3%83%96%E3%83%AB%E3%82%B7/)  
   - [SQL Serverに.NETで接続しようとすると1.2秒でタイムアウトする場合がある - give IT a try](https://blog.jnito.com/entry/20120219/1329633868)  
+  - [SQL Serverで断続的に発生するクエリタイムアウトの原因を調査した話 - ZOZO TECH BLOG](https://techblog.zozo.com/entry/sqlserver-query-timeout)  
 
 ---
 
