・linq整理 ・文字列整理 ・ほか整理

--- a/DB/SQLServer/構造関係/インデックスの比較.md
+++ b/DB/SQLServer/構造関係/インデックスの比較.md
@@ -389,3 +389,5 @@ WHERE
 [SQL Server: データベース内の全てのインデックス (index) を取得する - 便利なT-SQL＆クエリー集 - SQL Server 入門](https://sql55.com/query/sql-server-list-all-indexes.php)  
 
 compare indexes between 2 databases sql server
+
+[sys.indexes (Transact-SQL) - SQL Server | Microsoft Learn](https://learn.microsoft.com/ja-jp/sql/relational-databases/system-catalog-views/sys-indexes-transact-sql?view=sql-server-ver16)  
