--- a/GoodCode_BadCode/6.条件分岐.md
+++ b/GoodCode_BadCode/6.条件分岐.md
@@ -1460,7 +1460,7 @@ void magicPointDamage(final int damageAmount) {
 ### 6.6.2 切り替え機構をストラテジーパターンで実現する
 
 機能別にメソッドを分離できたが、何らかの仕様により、ヒットポイントダメージか魔法力ダメージかを切り替えたいケースがあるかもしれない。  
-これに対応するためにbooleanで判定してしまえば楽だが、このような場合はストラテジーパターンを用いるとよろしい。  
+これに対応するためにbooleanで判定してしまえば楽だが、このような場合はストラテジーパターンを用いるとよい。  
 
 フラグ引数で機能を切り替えていたのは、ヒットポイントダメージ、魔法力ダメージそれぞれの振る舞いなので、それに対するinterfaceを定義する。  
 
@@ -1554,4 +1554,4 @@ applyDamage(DamageType.magicPoint,damageAmount);
 リスト6.59(if文でべた書き)と比べて、何が起こるかわかりやすくなった。  
 条件分岐を書かずに済んでおり、かなり見通しがよくなった。  
 また、このようにストラテジーパターンで設計しておけば、新しいダメージ仕様の追加にも容易に対応できる。  
-例えば、テクニカルポイントダメージの仕様を追加したい場合は、DamageInterfaceを実装したTechnicakPointDamageクラスを定義するのがよいだろう。  
+例えば、テクニカルポイントダメージの仕様を追加したい場合は、DamageInterfaceを実装したTechnicakPointDamageクラスを定義するだけで済む。  
