・Enum ・Dapperで値オブジェクト ・REPL ・整理

--- a/Dapper/未分類メモ.md
+++ b/Dapper/未分類メモ.md
@@ -202,3 +202,9 @@ var customers = _connection.Query(sql, new {Gender = (object) null});
 ```
 
 [Dapper のクエリ](https://qiita.com/masakura/items/3409a766e46580a5ad99)  
+
+---
+
+## カラムと値の出力
+
+[Dapper ORMのQueryでカラム名を取得する方法 – EXCEEDSYSTEM](https://www.exceedsystem.net/2021/11/16/how-to-get-column-names-from-dynamic-type-result-records-using-query-method-of-dapper/)  
