--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -373,3 +373,7 @@ SELECT DATEDIFF(MILLISECOND, @STARTDATETIME, SYSDATETIME()) AS PROCESSING_TIME_M
 ```
 
 [SQL Serverで処理時間を計測する方法まとめ - Developer Note](https://developer-note.com/sql_server_measure_processing_time/)  
+
+---
+
+[SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する - Qiita]([SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する](https://qiita.com/maaaaaaaa/items/cdab2d91127ec8169ff1))  
