・Dapperまとめ ・整理

--- a/Article/未分類.md
+++ b/Article/未分類.md
@@ -1,5 +1,29 @@
 # コラム
 
+>突然嫌な記憶を思い出してしまったり、いろんな感情で頭の中がグルグルして困るときは「真上を見る」といいらしい。人間は真上を向いたままでは情報を処理することができなくなるので、最近は「困ったときは天井を見る」ってのを実践してるんだけど、本当にグルグルが解消されるからこれマジですごい。  
+<https://twitter.com/bit_ravel/status/1631400247749402625>  
+
+---
+
+>手足のように道具を使いこなせるようになると、その道具を使うということに関して.は認知エネルギーを消費しなくなるので、より本質的な問題に余ったエネルギーを回せるようになる、ということらしい。  
+>
+>裏返せば、道具を使うのに認知エネルギーを使っている状況では、より大きな問題を解くことに集中することができず、問題が解けないかもしれないということでもある  
+>
+>そういう意味では自分が主戦場とする領域に必要な言語なりフレームワークなりを手足のように使いこなせるということは、技術と呼ぶのではないかなと、思いますけどね  
+>
+>そこまで行くのにはそれ相応の鍛錬が必要なのだから、鍛錬によって自身に身体化したものは、紛れもない「技」でしょう
+>
+>それが需要のある技なのかとか、より多くの問題を解決できる技なのかとかはまた別の話ではあるとは思いますけども。
+>
+>剣道をやっていた時のことを思い出すと、最初はすり足の仕方に始まり、竹刀の持ち方、構え方、振りかぶり方… と一つ一つを、頭を使わずにできるようになるまでで繰り返し繰り返しそれを積み上げていって、やがて正しい型で打ち込みができるようになる、という過程があった
+>
+>素人に竹刀を持たせてもこの過程を経てないから、構えが非常に不格好になる。いくらそれを教えても、身体化できていないから全ての動作を統合することができないので、玄人と同じような構えはまずできない
+>
+>一つ一つの所作を繰り返すことで一つ一つ身体化していって積み上げていきそれを統合すると、より大きな動作が可能になるということであって、これこそが「技」なんではないかなあと思いますね
+<https://twitter.com/naoya_ito/status/1631232146152255489>  
+
+---
+
 >自分は「強いエンジニアさえ集めれば開発は上手くいく」と思ったけど、全然そんなことないと最近感じる。
 いるに越したことないけど、開発体制や組織体制が良くないと開発は上手くいかない。
 もうなんかスポーツみたいだな。
