--- a/Dapper/未分類メモ.md
+++ b/Dapper/未分類メモ.md
@@ -126,22 +126,6 @@ public class BookRepository : IBookRepository
 
 ---
 
-## サクッとDapperを使うテンプレート
-
-``` cs
-using Dapper;
-using System.Data.SqlClient;
-
-string constr = @"Server=.\SQLEXPRESS;Database=<db_name>;Trusted_Connection=True;Trust Server Certificate=true";
-using SqlConnection connection = new SqlConnection(constr);
-var query = "SELECT * FROM <table>";
-var result = connection.Query<dynamic>(query);
-foreach (var item in result)
-    Console.WriteLine(item.<field_name>);
-```
-
----
-
 ## join dynamic
 
 Joinした結果を受け取るPOCOがない。  
@@ -208,3 +192,121 @@ var customers = _connection.Query(sql, new {Gender = (object) null});
 ## カラムと値の出力
 
 [Dapper ORMのQueryでカラム名を取得する方法 – EXCEEDSYSTEM](https://www.exceedsystem.net/2021/11/16/how-to-get-column-names-from-dynamic-type-result-records-using-query-method-of-dapper/)  
+
+---
+
+## トランザクション
+
+Executeメソッドの第三引数にSqlTransactionインスタンスを渡せば良い。  
+
+``` C#
+{
+    //トランザクション開始
+    using (var tran = connection.BeginTransaction())
+    {
+        try
+        {
+            var result = connection.Execute(query, param, tran);
+            tran.Commit();
+        }
+        catch (Exception e)
+        {
+            tran.Rollback();
+            throw;
+        }
+        finally
+        {
+            connection.Close();
+        }
+    }
+}
+```
+
+[C# DapperでDB接続する方法（トランザクション編）](https://learning-collection.com/c-dapper%E3%81%A7db%E6%8E%A5%E7%B6%9A%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95%EF%BC%88%E3%83%88%E3%83%A9%E3%83%B3%E3%82%B6%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3%E7%B7%A8%EF%BC%89/)  
+
+---
+
+## コンストラクタ
+
+``` cs
+using Dapper;
+using System.Data.SqlClient;
+
+string constr = @"Server=.\SQLEXPRESS;Database=<db_name>;Integrated Security=True;";
+using SqlConnection connection = new SqlConnection(constr);
+var query = "SELECT * FROM <table>";
+var result = connection.Query<dynamic>(query);
+
+class Items
+{
+    public int id { get; set; }
+    public string name { get; set; }
+    public int price { get; set; }
+    public Category category { get; set; }
+
+    public Items(params dynamic[] items)
+    {
+        _ = items;
+    }
+    
+    public Items(dynamic items)
+    {
+        _ = items;
+    }
+}
+
+// 例外が発生しました: CLR/System.InvalidOperationException
+// 型 'System.InvalidOperationException' のハンドルされていない例外が Dapper.dll で発生しました: 'A parameterless default constructor or one matching signature (System.Int32 id, System.String name, System.Int32 price, System.String category) is required for Items materialization'
+```
+
+---
+
+## DapperのSelectサンプル
+
+1. Database1というローカルDBを作成する  
+2. ローカルDB上でテーブル生成クエリを流しておく  
+3. 適当なクラスを作って、コードを貼り付けて実行する  
+
+``` sql
+CREATE TABLE Person(
+    [ID] INT,
+    [Name] NVARCHAR(100)
+)
+INSERT INTO [Person] VALUES (1, N'山田'), (2, N'鈴木'), (3, N'佐藤')
+```
+
+``` C#
+using Dapper;
+using System.Data.SqlClient;
+
+public void Execute()
+{
+    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+    {
+        DataSource = @"(LocalDB)\MSSQLLocalDB",
+        AttachDBFilename = System.IO.Path.GetFullPath(@"..\..\Database1.mdf"),
+        IntegratedSecurity = true,
+    };
+    using (var connection = new SqlConnection(builder.ConnectionString))
+    {
+        connection.Open();
+        var query = "SELECT * FROM [Person]";
+        // SQLの発行とデータのマッピング
+        // 取得データは IEnumerable<Person> 型
+        var result = connection.Query<Person>(query);
+        foreach (var p in result)
+        {
+            Console.WriteLine($"{nameof(Person.ID)}: {p.ID}  {nameof(Person.Name)}: {p.Name}");
+        }
+    }
+}
+
+/// <summary>
+/// マッピング用クラス
+/// </summary>
+class Person
+{
+    public int ID { get; set; }
+    public string Name { get; set; }
+}
+```
