--- a/English/その他英単語.md
+++ b/English/その他英単語.md
@@ -4,34 +4,34 @@
 
 ## tight
 
-［名・形動］
-１ きついこと。かたくしっかりしていること。ぴったりと密着していること。また、そのさま。「タイトな結び目」「タイトなスーツ」
-２ 商品の需要供給の関係が逼迫(ひっぱく)していること。品薄なこと。また、そのさま。「需給がタイトに推移する」
+［名・形動］  
+１ きついこと。かたくしっかりしていること。ぴったりと密着していること。また、そのさま。「タイトな結び目」「タイトなスーツ」  
+２ 商品の需要供給の関係が逼迫(ひっぱく)していること。品薄なこと。また、そのさま。「需給がタイトに推移する」  
 
 ---
 
 ## reception
 
-レセプション
-歓迎会・招待会
+レセプション  
+歓迎会・招待会  
 
 ---
 
 ## redemption
 
-リデンプション
-買い戻し。償還(返済する事らしい)。救済。
-LOLのリデンプションは救済って意味だろうな。
-あれサポアイテムだったよな。
+リデンプション  
+買い戻し。償還(返済する事らしい)。救済。  
+LOLのリデンプションは救済って意味だろうな。  
+あれサポアイテムだったよな。  
 
 ---
 
 ## narrative
 
-ナラティブガンダム！！
-物語
+ナラティブガンダム！！  
+物語  
 
-響きはかっこいいんですけど、意味は大したことないです。
+響きはかっこいいんですけど、意味は大したことないです。  
 
 ---
 
@@ -152,3 +152,27 @@ bakedは「焼いた」
 
 [名]  
 関心事、懸案事項  
+
+---
+
+## jaggernaut
+
+[名]  
+絶対的な力。不可抗力的なもの。  
+
+>現在の英語では、無慈悲で破壊的で止められないとみなされる文字通りの力、または比喩的な力のことである。  
+>[Juggernaut - Wikipedia](https://en.wikipedia.org/wiki/Juggernaut)  
+
+[Juggernaut - Wikipedia](https://en.wikipedia.org/wiki/Juggernaut)  
+[juggernautの意味・使い方・読み方｜英辞郎 on the WEB](https://eow.alc.co.jp/search?q=juggernaut#:~:text=%E3%80%8A%E3%83%92%E3%83%B3%E3%83%87%E3%82%A3%E3%83%BC%E3%80%8B%E3%82%B8%E3%83%A3%E3%82%AC%E3%83%8E%E3%83%BC%E3%83%88%E3%80%81%E4%BA%BA,%E6%96%B9%E6%B3%95%E3%81%AF%E3%81%AA%E3%81%84%E3%81%A0%E3%82%8D%E3%81%86%E3%81%8B%EF%BC%9F)  
+
+---
+
+## bruiser
+
+- 体が大きくて力が強い人、がっしりした人、強い大男、乱暴者、荒くれもの  
+- 重量級のプロボクサー  
+
+lolでいうブルーザーはファイターとタンクの中間に位置するチャンピオンを指す。  
+
+[【LOL用語解説】ブルーザーの意味 - 基本からしっかりLOL攻略](https://lolsyoshinsya.hatenablog.com/entry/term/bruiser)  
