--- a/Article/レビュー.md
+++ b/Article/レビュー.md
@@ -2,3 +2,7 @@
 
 >レビューはエンジニアの好き嫌いとか最近興味がある技術とかなどの思いの丈を語る為に提供されたしゃべり場ではなく、成果物の品質が基準に達しているかを確認する場という事が分かっていない人がホント多いなというが最近の感想。  
 <https://twitter.com/komitsubo/status/1516544935423770624>  
+
+<!--  -->
+>コードレビュー、「ここアカンやん」「おっホンマや直しとくわ」で済むなら楽なんですが、実際は「なぜダメなのか」「どう直せばいいのか」を説明したり、修正コード例、参考リンクまで用意するのに無限に時間が溶け、なんかもう自分で最初からコード書いたほうが早くない？となる恐ろしい作業工程  
+<https://twitter.com/cubbit2/status/1631617121905156096>  
