参考追加、整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,6 +1,40 @@
 # 後でまとめたいやつら
 
 [【C#】ファイルに上書きする、WriteAllTextメソッドを解説します - ゲーマーときどきエンジニア](https://www.tairax.com/entry/Csharp/WriteAllText-method)  
+[実はDDDってしっくりこないんです - タオルケット体操](https://hachibeechan.hateblo.jp/entry/domain-driven-deskwork)  
+[共通化という考え方はアンチパターンを生み出すだけ説 - タオルケット体操](https://hachibeechan.hateblo.jp/entry/dont-think-just-make-it-abstract)  
+
+[C#でTypeをキーにしたDictionaryのパフォーマンス比較と最速コードの実装 - Grani Engineering Blog](https://engineering.grani.jp/entry/2017/07/28/145035)  
+
+sqlserver query cost relative to the batch  
+推定実行プランの表示の時に表示されるアイコンの紹介  
+[プラン表示の論理操作と物理操作のリファレンス - SQL Server | Microsoft Learn](https://learn.microsoft.com/ja-jp/sql/relational-databases/showplan-logical-and-physical-operators-reference?view=sql-server-ver16)  
+
+推定実行プランのコストの見方
+[Generic information - SQLServerFast](https://sqlserverfast.com/epr/generic_information/)  
+
+サロゲートキーをつけなかったせいで死にそうになった
+
+[【DB】 サロゲートキー（代理キー）の初歩](https://mycode.snow69it.net/915/)  
+[欅樹雑記: 自然キー vs 人工キー　勝手に決着](https://blog.zelkova.cc/2016/10/natural-vs-artificial.html)  
+[サロゲートキーについて - 今日も元気に真人間](https://glory-hm.hatenablog.com/entry/2018/05/12/130000)  
+[SQLアンチパターン「IDリクワイアド」の再検討 - 極北データモデリング](https://tgk.hatenadiary.org/entry/20130305/1362485154)  
+
+サロゲートキー 日付 ソート
+[SQLアンチパターン メンター用資料](https://www.slideshare.net/hironorimiura/sql-34880588)  
+
+StrategyPatternのDI  
+[Hands-On: Strategy Design Pattern in .NET Core - DEV Community](https://dev.to/hamsheed993/in-depth-look-strategy-design-pattern-in-net-core-5d09)  
+[C# Strategy Pattern Tutorial: 3 Reasons to Put It In Action](https://methodpoet.com/strategy-pattern/)  
+
+compare indexes between 2 databases sql server  
+[Query to compare indexes between two tables | SQL Studies](https://sqlstudies.com/2013/10/16/query-to-compare-indexes-between-two-tables/)  
+[SQL Server: データベース内の全てのインデックス (index) を取得する - 便利なT-SQL＆クエリー集 - SQL Server 入門](https://sql55.com/query/sql-server-list-all-indexes.php)  
+
+ストラテジーパターンとステートパターン
+[State パターン (状態を表すオブジェクトを用意し, 内包するその状態オブジェクトを切り替えることにより, 処理内容 (振る舞い) を変えられるようにする) — WTOPIA v1.0 documentation](https://ie.u-ryukyu.ac.jp/~e085739/java.it.21.html)  
+[C#でGoFのデザインパターン~Stateパターン編~ | cloud.config Tech Blog](https://tech-blog.cloud-config.jp/2019-10-28-csharp-gof-statepattern/)  
+[C#でGoFのデザインパターン~Strategyパターン編~ | cloud.config Tech Blog](https://tech-blog.cloud-config.jp/2019-10-30-strategypattern/)  
 
 ---
 
