--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -38,6 +38,55 @@ compare indexes between 2 databases sql server
 
 ---
 
+## OOPとFPの比較
+
+OOP
+
+``` cs
+var elevator = new Elevator();
+elevator.GoUp().GoUp().GoDown();
+
+class Elevator {
+    private int CurrentFloor;
+
+    Elevator(){
+        this.CurrentFloor = 1;
+    }
+
+    public Elevator GoUp(){
+        this.CurrentFloor++:
+        return this;
+    }
+    public Elevator GoDown(){
+        this.CurrentFloor--;
+        return this;
+    }
+}
+```
+
+FP
+
+``` cs
+IElevatorState initialState = {CurrentFloor = 1};
+var finalState = GoDown(GoUp(GoUp(initialState)));
+
+interface IElevatorState {
+    int CurrentFloor
+}
+
+IElevatorState GoUp(IElevatorState state) {
+    return state.CurrentFloor + 1;
+}
+
+IElevatorState GoDown(IElevatorState state) {
+    return state.CurrentFloor + 1;
+}
+```
+
+[(17) 初探Functional Programming：徹底改變程式思維 - 基礎概念篇 - YouTube](https://www.youtube.com/watch?v=qpOcRG3e9Q8&t=701s)  
+
+---
+
 ## SqlClient 待ち操作がタイムアウトになりました
 
 DbUpの移行中に発生。  
