・複合インデックス ・ストアドプロシージャ

--- a/DB/DB設計/インデックス/複合インデックス.md
+++ b/DB/DB設計/インデックス/複合インデックス.md
@@ -1,6 +1,49 @@
 # 複合インデックス
 
+## 複合インデックスとは？
+
 テーブルの複数のカラムを組み合わせて1つのインデックスとしたもの。  
+
+---
+
+## 複合インデックスのメリット
+
+前提としてインデックスの説明から入る。  
+インデックスはキーと、そのキーを持つデータがテーブルのどの行に存在するかを特定する行IDから成り立っている。  
+
+![Alt text](Asset/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202023-03-06%20221738.png)
+
+上記のように、「姓」だけでインデックスを作成した場合を考える。  
+姓が「佐藤」で名が「太郎」という条件で検索を実行すると、インデックスで3件のレコードがヒットする。  
+次にそのヒットした3件のレコードのテーブルデータを1つずつ調べて、「名」が一致するかどうかを検査する。  
+
+これを検索速度から見ると、「インデックスでの検索時間 + テーブルデータを調べる処理時間」 ということになるので、インデックスの検索だけで行を決定できる場合と比べて時間がかかる事になる。  
+
+そこで今度は「姓」と「名」で複合インデックスとした場合を考える。  
+
+![Alt text](Asset/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202023-03-06%20221717.png)
+
+上記画像のように、複合インデックスとして検索した場合、姓が「佐藤」で名が「太郎」という条件での検索は、インデックスの検索だけで、行ID:0105が目的のデータであることを特定することができる。  
+
+これが複合インデックスを作成するメリットである。  
+
+[データベース／複合インデックスの落とし穴](https://www.gatc.jp/gat/it/it02dbindex.html)  
+
+---
+
+「顧客マスタ」のように何百万レコードもあるような場合は、同姓同名が相当な数存在することになる。  
+なので、「生年月日」も複合インデックスに追加したくなる。  
+次に「都道府県」次にまた何か、といった具合に何でもかんでも複合インデックスに含めたくなる事象が発生する。  
+
+これも対処法がある模様。
+
+[データベース／複合インデックスの落とし穴](https://www.gatc.jp/gat/it/it02dbindex.html)  
+
+---
+
+## 複合インデックスとした場合に、逆に速度が遅くなってしまう場合
+
+[データベース／複合インデックスの落とし穴](https://www.gatc.jp/gat/it/it02dbindex.html)  
 
 ---
 
