・匿名型 ・VALUES ・Dapper Parallel ・SUM ・整理

--- a/DB/DB設計/インデックス/複合インデックス.md
+++ b/DB/DB設計/インデックス/複合インデックス.md
@@ -8,7 +8,6 @@
 
 ## 複合インデックスのメリット
 
-前提としてインデックスの説明から入る。  
 インデックスはキーと、そのキーを持つデータがテーブルのどの行に存在するかを特定する行IDから成り立っている。  
 
 ![Alt text](Asset/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202023-03-06%20221738.png)
@@ -17,7 +16,7 @@
 姓が「佐藤」で名が「太郎」という条件で検索を実行すると、インデックスで3件のレコードがヒットする。  
 次にそのヒットした3件のレコードのテーブルデータを1つずつ調べて、「名」が一致するかどうかを検査する。  
 
-これを検索速度から見ると、「インデックスでの検索時間 + テーブルデータを調べる処理時間」 ということになるので、インデックスの検索だけで行を決定できる場合と比べて時間がかかる事になる。  
+検索速度の観点からすると、「インデックスでの検索時間 + テーブルデータを調べる処理時間」 ということになるので、インデックスの検索だけで行を決定できる場合と比べて時間がかかる事になる。  
 
 そこで今度は「姓」と「名」で複合インデックスとした場合を考える。  
 
