--- a/Dapper/未分類メモ.md
+++ b/Dapper/未分類メモ.md
@@ -168,13 +168,13 @@ IEnumerable<dynamic> products = sqlConnection.Query(sql);
 
 ## 動的に条件文を組み立てる
 
+例えば、性別が指定されなかった場合は全てのデータを取得し、指定されたときはその性別を取得するという条件を動的に組み立てる場合、SQL文の組み立てを以下のように行うと思われる。  
+
 ``` cs
 var sql = "select * from customers" + (gender != null ? " where gender = @Gender" : "");
 ```
 
-上記、動的生成は下記のように書き換え可能。  
-割と盲点だった。  
-インデックスは不明な模様。  
+これは下記のように書き換え可能。  
 
 ``` cs
 const string sql = @"
@@ -184,6 +184,8 @@ where (gender = @Gender or @Gender is null)
 ";
 var customers = _connection.Query(sql, new {Gender = (object) null});
 ```
+
+インデックスが効くかどうかは不明な模様。  
 
 [Dapper のクエリ](https://qiita.com/masakura/items/3409a766e46580a5ad99)  
 
