--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -38,6 +38,15 @@ compare indexes between 2 databases sql server
 
 ---
 
+## AI
+
+[OpenAIのapi-Key管理](https://platform.openai.com/account/api-keys)
+
+[VSCodeにChatGPTの拡張機能を入れてコードレビューやバグを発見してもらう - Qiita](https://qiita.com/tak001/items/c3000b3ce9b6e72b2ae5)  
+[VSCodeのChatGPTプラグインを日本語化する - Qiita](https://qiita.com/akiraak/items/b8ad643eafe1a32341ff)  
+
+---
+
 ## OOPとFPの比較
 
 OOP
