--- a/DB/SQLServer/チートシート.md
+++ b/DB/SQLServer/チートシート.md
@@ -7,10 +7,12 @@
 ## 列のリネーム
 
 ``` sql
--- 列のリネーム
 EXEC sp_rename 'スキーマ名.テーブル名.現在のカラム名', '新しいカラム名', 'COLUMN';
+```
 
--- 例:テーブル dbo.ErrorLog の ErrorTime 列名を AdventureWorksLT データベースの ErrorDateTime に変更する
+例:テーブル dbo.ErrorLog の ErrorTime 列名を AdventureWorksLT データベースの ErrorDateTime に変更する
+
+``` sql
 EXEC sp_rename 'dbo.ErrorLog.ErrorTime', 'ErrorDateTime', 'COLUMN';
 ```
 
@@ -19,10 +21,12 @@ EXEC sp_rename 'dbo.ErrorLog.ErrorTime', 'ErrorDateTime', 'COLUMN';
 ## テーブルのリネーム
 
 ``` sql
--- テーブルのリネーム
 EXEC sp_rename 'スキーマ名.テーブル名', '新しいテーブル名';
+```
 
--- 例:Sales スキーマの SalesTerritory テーブルの名前を SalesTerr に変更
+例:Sales スキーマの SalesTerritory テーブルの名前を SalesTerr に変更
+
+``` sql
 EXEC sp_rename 'Sales.SalesTerritory', 'SalesTerr';
 ```
 
@@ -31,11 +35,27 @@ EXEC sp_rename 'Sales.SalesTerritory', 'SalesTerr';
 ## 主キー名のリネーム
 
 ``` sql
--- 主キー名のリネーム
 EXEC sp_rename '現在の主キー名', '新しい主キー名', 'OBJECT';
+```
 
--- 例:Sales スキーマの Tamp_Table_PKC 主キー名の名前を Table_PKC に変更
+例:Sales スキーマの Tamp_Table_PKC 主キー名の名前を Table_PKC に変更  
+
+``` sql
 EXEC sp_rename 'Sales.Tamp_Table_PKC', 'Table_PKC', 'OBJECT';
+```
+
+---
+
+## データ型の変更
+
+``` sql
+ALTER TABLE テーブル名 ALTER COLUMN 変更する列名 データ型
+```
+
+例:SlipテーブルのSlipClsフィールドのデータ型をNVARCHAR(45)に変更
+
+``` sql
+ALTER TABLE [Slip] ALTER COLUMN [SlipCls] NVARCHAR(45)
 ```
 
 ---
@@ -68,3 +88,7 @@ BEGIN CATCH
 END CATCH
 SET XACT_ABORT OFF
 ```
+
+---
+
+[テーブル定義を変更する（ALTER TABLE） - SQL Server - Project Group](https://www.projectgroup.info/tips/SQLServer/SQL/SQL000005.html)  
