・json quickuse ・読み取り専用変数 ・参考追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -38,6 +38,53 @@ compare indexes between 2 databases sql server
 
 ---
 
+## 読み取り専用のローカル変数
+
+C#のローカル変数にはreadonlyはつけられない。
+初期代入可能で以後、変更不可なローカル変数は定義できない。
+Javaはできる。(final修飾子)  
+
+読み取り専用のローカル変数は定義できないが、ローカル定数は定義できる。  
+しかし、この変数は初期代入ができない。  
+
+``` cs
+void method() 
+{
+    const int ID = 1;
+    ID = 2; // エラー
+}
+
+void method2(int id) 
+{
+    const int ID = id; // エラー
+}
+```
+
+``` java
+void method() {
+    final int a; // 初期化されていないが、コンパイルエラーにはならない
+    System.out.println(a); // コンパイルエラー!! finalだが値が設定されていないため使用できない
+    a = 10;
+    System.out.println(a); // 変数に値が設定されたため参照できる
+    a = 123; // コンパイルエラー!! finalなので再代入はできない。
+}
+```
+
+こちらの記事のコメントで言及がある。  
+
+>C#のローカル変数にreadonlyがない理由は、おそらく明示しなくてもコンパイラにはわかることだからです。  
+>ローカル変数は基本的にそのメソッド内でしかインスタンスを差し替えることができないので、  
+>
+>- メソッド内で再代入していない  
+>- refつきパラメータとして他のメソッドに渡していない  
+>
+>この2つを満たしていれば明示しなくてもコンパイラはreadonly的な変数として扱います。  
+>[【Unity】ローカル変数のreadonly（読み取り専用）を実現する方法【C#】 - Qiita](https://qiita.com/su10/items/602e89acfa0439c707ae)  
+
+[Javaのfinalを大解剖 finalの全てがここにある!!](https://www.bold.ne.jp/engineer-club/java-final)  
+
+---
+
 ## AI
 
 [OpenAIのapi-Key管理](https://platform.openai.com/account/api-keys)
