・jsonクイックスタート ・blazorクイックスタート ・整理

--- a/DB/SQLServer/チートシート.md
+++ b/DB/SQLServer/チートシート.md
@@ -4,6 +4,12 @@
 
 ---
 
+## 列の削除
+
+``` sql
+ALTER TABLE TMc_Join DROP COLUMN BackgroundColor;
+```
+
 ## 列のリネーム
 
 ``` sql
@@ -83,8 +89,8 @@ BEGIN TRY
 END TRY
 
 BEGIN CATCH
-    ROLLBACK TRANSACTION
     THROW
+    ROLLBACK TRANSACTION
 END CATCH
 SET XACT_ABORT OFF
 ```
