・sqlserver参考追加 ・WaitAll,WhenAllの比較 ・整理

--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -269,31 +269,6 @@ CLUSTERD句がなくても動くことは知っていたのだが、この場合
 
 ---
 
-## コマンドラインからSqlServerを使う
-
-MySQLのようなグリッド表示の結果が欲しくて色々探した。  
-とりあえずcliから実行する方法を探したら色々あったので、備忘録として残す。  
-
-sqlcmd : 従来のツール。古い。使い勝手が悪い。  
-mssql-cli : 新しいツール。python製。cliで使うならこれ一択。  
-
-pythonをインストールしてpipからmssql-cliをインストールする。  
-最新版をインストールするとバグるのでpyhonのバージョンは3.9のを使うこと。  
-
-で、結局grid表示はできなかったので、使えなかった。  
-
-[新しいコマンドラインツールの mssql-cli のクエリ実行方法のメモ](https://blog.engineer-memo.com/2017/12/24/%E6%96%B0%E3%81%97%E3%81%84%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%83%A9%E3%82%A4%E3%83%B3%E3%83%84%E3%83%BC%E3%83%AB%E3%81%AE-mssql-cli-%E3%81%AE%E3%82%AF%E3%82%A8%E3%83%AA%E5%AE%9F%E8%A1%8C%E6%96%B9/)  
-[コマンドラインでSQL Serverを使う最低限のメモ](https://qiita.com/zaburo/items/6edf7c05c5d4f5e039eb)  
-
-インストールはここを参考にする。  
-[MSSQL-CLI: An Interactive Command Line SQL Server Query Tool](https://www.mytecbits.com/microsoft/sql-server/mssql-cli)  
-
-`ImportError: cannot import name 'Iterable' from 'collections' in Python`というエラーが発生した。  
-pythonのバージョンを3.9にしろという記事。  
-[ImportError: cannot import name 'Iterable' from 'collections' in Python](https://stackoverflow.com/questions/72032032/importerror-cannot-import-name-iterable-from-collections-in-python)  
-
----
-
 ## SQLを止める方法
 
 GOTOするかTHROWする。  
@@ -349,6 +324,15 @@ select * from sys.key_constraints
 ```
 
 [【SQL Server】外部キー制約の一覧を確認する](https://sqlserver.work/2021/01/06/%E3%80%90sys-foreign_keys-%E3%80%91%E5%A4%96%E9%83%A8%E3%82%AD%E3%83%BC%E5%88%B6%E7%B4%84%E3%81%AE%E4%B8%80%E8%A6%A7%E3%82%92%E7%A2%BA%E8%AA%8D%E3%81%99%E3%82%8B/)  
+
+---
+
+## SQL Serverのバージョンが異なるため復元に失敗する
+
+探しても文献が出てこない。  
+大抵の場合は、CREATEスクリプトを生成してデータを移行しろという事しか書いていない。  
+
+[SQL Serverのバージョンが異なるため復元に失敗する - Qiita](https://qiita.com/miltood/items/b2c79a62c7e5604f216d)  
 
 ---
 
