・SQLServer参考追加 ・整理

--- a/Article/レビュー.md
+++ b/Article/レビュー.md
@@ -6,3 +6,5 @@
 <!--  -->
 >コードレビュー、「ここアカンやん」「おっホンマや直しとくわ」で済むなら楽なんですが、実際は「なぜダメなのか」「どう直せばいいのか」を説明したり、修正コード例、参考リンクまで用意するのに無限に時間が溶け、なんかもう自分で最初からコード書いたほうが早くない？となる恐ろしい作業工程  
 <https://twitter.com/cubbit2/status/1631617121905156096>  
+
+[コードレビューで嫌われる人の特徴7選 - Qiita](https://qiita.com/emjo1804/items/48f6e78237a04684ab38)  
