--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -336,4 +336,36 @@ select * from sys.key_constraints
 
 ---
 
-[SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する - Qiita]([SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する](https://qiita.com/maaaaaaaa/items/cdab2d91127ec8169ff1))  
+[SQLServer: int型のID値を持つテーブルをできる限り短時間でbigint型に変更する - Qiita](https://qiita.com/maaaaaaaa/items/cdab2d91127ec8169ff1)  
+
+---
+
+## ローカルサーバーでSQLServer認証する
+
+ローカルサーバーはWindows認証一択だが、あえてSQLServer認証するならどのような設定をするのか気になったのでまとめ。  
+
+まずSQL ServerでMixed Mode認証が有効になっていることを確認する。  
+Mixed Mode認証は、Windows認証とSQL Server認証の両方をサポートする。  
+
+**SQL ServerでMixed Mode認証を有効にする方法:**
+
+1. SQL Server Management Studio (SSMS) を開きます。  
+2. オブジェクト エクスプローラで、対象のSQL Serverインスタンスに接続します。  
+3. サーバー名を右クリックし、[プロパティ] を選択します。  
+4. [セキュリティ]ページを開きます。  
+5. [サーバー認証] セクションで、[SQL ServerおよびWindows認証モード] を選択します。  
+6. [OK] をクリックして変更を適用します。  
+7. SQL Server サービスを再起動して変更を反映させます。  
+8. オブジェクト エクスプローラで、対象のSQL Serverインスタンスに接続します。  
+9. サーバー名を展開し、[セキュリティ] フォルダを展開します。  
+10. [セキュリティ] フォルダの下にある [ログイン] フォルダを右クリックし、[新しいログイン] を選択します。  
+11. [ログイン - 新規] ウィンドウが開きます。  
+12. [ログイン名] フィールドに、新しいユーザー名（ID）を入力します。  
+13. [認証] セクションで、[SQL Server認証] を選択します。  
+14. [パスワード] と [パスワードの確認] フィールドに、新しいパスワードを入力します。  
+15. [パスワードポリシーを適用] のチェックボックスがオンになっている場合、パスワードポリシーを適用します。適用しない場合は、チェックボックスをオフにします。  
+16. 左側のペインで [サーバー ロール] を選択し、必要に応じてユーザーにロールを割り当てます。例えば、ユーザーに管理者権限を付与する場合は、[sysadmin] チェックボックスをオンにします。  
+17. 左側のペインで [ユーザー マッピング] を選択し、ユーザーがアクセスできるデータベースを選択し、必要に応じてデータベースロールを割り当てます。  
+18. 必要に応じて他の設定を行い、[OK] をクリックして新しいログインを作成します。  
+
+新しいログインが作成されたら、先ほど作成したIDとパスワードを使用してSQL Serverに接続できます。
