--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,5 +1,19 @@
 # 後でまとめたいやつら
 
+c# インターフェース DI
+[「DI使うとインタフェース地獄に陥るらしいから使いたくない」と言っていたA氏がインタフェースを使わずにDIで幸せになるまで - Qiita](https://qiita.com/jun1s/items/55b12c7febd7de6a0a45)  
+
+
+
+[「SQLのアンチパターン」3パターンを解説します！](https://products.sint.co.jp/topsic/blog/sql-anti-pattern)  
+[『SQLアンチパターン』まとめその3（13〜18章） - Qiita](https://qiita.com/Natsumag/items/aca26493cd071a573c4a)  
+
+
+[.NET Core CLIだけどWindows上なら.NET Framework使いたいよね! - Qiita](https://qiita.com/mokuba/items/bb591fdfe3be33f923c4)  
+[VS Code リモート開発で .NET Framework の .exe をビルドしてみた | by Joni 【ジョニー】 | Medium](https://medium.com/@joni2nja/vs-code-remote-development-build-net-framework-89eaa99d96d1)  
+[.NETビルド・エンジン「MSBuild」使いこなし術（1/2） - ＠IT](https://atmarkit.itmedia.co.jp/fdotnet/special/msbuild01/msbuild01_01.html)  
+
+
 [【C#】ファイルに上書きする、WriteAllTextメソッドを解説します - ゲーマーときどきエンジニア](https://www.tairax.com/entry/Csharp/WriteAllText-method)  
 [実はDDDってしっくりこないんです - タオルケット体操](https://hachibeechan.hateblo.jp/entry/domain-driven-deskwork)  
 [共通化という考え方はアンチパターンを生み出すだけ説 - タオルケット体操](https://hachibeechan.hateblo.jp/entry/dont-think-just-make-it-abstract)  
@@ -44,6 +58,59 @@ compare indexes between 2 databases sql server
 
 [誰かのメモ: C# で SJIS を UTF-8 にエンコードする方法](https://private-static.blogspot.com/2014/06/c-sjis-utf-8.html)  
 [.NETで文字コードを気にせずにテキストファイルを読み込む | Qreat](https://qreat.tech/5407/)  
+
+---
+
+## union all 後のindex
+
+例えば、AテーブルとBテーブルがあります。  
+AテーブルとBテーブルは同じ構造です。  
+Aテーブルは当日・未来の情報を保持し、Bテーブルは過去の情報を保存するテーブルです。  
+BIツールのように、データを収集して表示したい場合に、テーブルを連結して、日付等でBETWEENしたいです。  
+AテーブルもBテーブルも何かしらのコードや日付等にインデックスが貼られているものとします。  
+その時、日付やコードを条件に含めた場合に、union all後のサブテーブルへの検索にはインデックスは効くと思われますか？  
+イメージとしてはこんな感じです。  
+
+C#でDapperを使ったアクセスを想定し、データベースはSQLServerとします。
+
+``` sql
+SELECT SUM(Amount)
+FROM (
+    SELECT * FROM A_Table
+    UNION ALL
+    SELECT * FROM B_Table
+) AS SQ
+WHERE MainCD = @mainCD
+AND BusinessDate BETWEEN @businessDateTermFrom AND @businessDateTermTo
+AND ItemCD BETWEEN @FromCD1 AND @ToCD1
+```
+
+A: このようなクエリの場合、インデックスが効くかどうかはデータベースのオプティマイザに依存しますが、効く可能性は高いです。  
+ただし、より効率的なクエリを書くことで、インデックスの効果をさらに向上させることができます。  
+
+具体的には、UNION ALLの前にWHERE句を適用して、それぞれのテーブルでフィルタリングを行うと、データベースがインデックスをより効果的に使用できます。  
+以下のようなクエリを検討してみてください。  
+
+``` sql
+SELECT SUM(Amount)
+FROM (
+    SELECT * FROM A_Table
+    WHERE MainCD = @officeCD
+    AND BusinessDate BETWEEN @businessDateTermFrom AND @businessDateTermTo
+    AND ItemCD BETWEEN @FromCD1 AND @ToCD1
+    UNION ALL
+    SELECT * FROM B_Table
+    WHERE MainCD = @officeCD
+    AND BusinessDate BETWEEN @businessDateTermFrom AND @businessDateTermTo
+    AND ItemCD BETWEEN @FromCD1 AND @ToCD1
+) AS SQ
+```
+
+このようにクエリを変更することで、それぞれのテーブルに対してフィルタリングが行われるため、インデックスが適切に使われる可能性が高まります。  
+ただし、実際のパフォーマンスはデータベース管理システム（DBMS）やデータの分布、インデックスの設定などに依存します。  
+
+最適なパフォーマンスを得るためには、実行計画を確認し、インデックスが適切に使用されているかどうかをチェックしてください。  
+また、必要に応じてインデックスの設定を調整して、クエリのパフォーマンスを向上させることができます。  
 
 ---
 
