--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -63,6 +63,133 @@ compare indexes between 2 databases sql server
 
 ---
 
+## 緊急修正(HotFix)
+
+``` mermaid
+%%{init: {'gitGraph': {'mainBranchOrder': 99}} }%%
+
+gitGraph
+
+branch Release
+commit
+branch ReleaseFix
+branch Staging
+
+checkout Release
+commit Tag:"障害発生"
+branch HotFix/1122
+checkout HotFix/1122
+commit
+checkout Staging
+merge HotFix/1122
+checkout ReleaseFix
+merge HotFix/1122
+checkout Release
+merge HotFix/1122 tag: "解決" type: REVERSE
+commit
+
+checkout Release
+commit Tag:"障害発生"
+branch HotFix/3344
+checkout HotFix/3344
+commit
+checkout Staging
+merge HotFix/3344
+checkout ReleaseFix
+merge HotFix/3344
+checkout Release
+merge HotFix/3344 tag: "解決" type: REVERSE
+
+checkout Staging
+commit
+checkout ReleaseFix
+commit
+checkout Release
+commit
+```
+
+## 課題対応(Fix)
+
+``` mermaid
+%%{init: {'gitGraph': {'mainBranchOrder': 99}} }%%
+
+gitGraph
+
+branch Release
+commit
+branch ReleaseFix
+branch Staging
+checkout Staging
+
+commit
+branch Fix/7788
+checkout Fix/7788
+commit
+checkout Staging
+merge Fix/7788
+checkout ReleaseFix
+merge Fix/7788
+checkout Release
+merge  Fix/7788
+commit
+
+commit
+branch Fix/9900
+checkout Fix/9900
+commit
+checkout Staging
+merge Fix/9900
+checkout ReleaseFix
+merge Fix/9900
+checkout Release
+merge  Fix/9900
+
+checkout Staging
+commit
+checkout ReleaseFix
+commit
+checkout Release
+commit
+```
+
+## 新規実装(Develop)
+
+``` mermaid
+%%{init: {'gitGraph': {'mainBranchOrder': 99}} }%%
+
+gitGraph
+
+branch Release
+commit
+branch ReleaseFix
+branch Staging
+checkout Staging
+
+commit
+branch Develop/1212
+checkout Develop/1212
+commit
+checkout Staging
+merge Develop/1212 tag: "発行・テスト" type: REVERSE
+
+commit
+branch Develop/3434
+checkout Develop/3434
+commit
+checkout Staging
+merge Develop/3434 tag: "発行・テスト" type: REVERSE
+
+checkout ReleaseFix
+merge Staging
+checkout Release
+merge Staging
+
+checkout ReleaseFix
+commit
+checkout Release
+commit
+```
+
 ---
 
 ## Window関数
