パワーシェルの整理

--- a/Batch/バッチ.md
+++ b/Batch/バッチ.md
@@ -14,6 +14,22 @@ rem [コメント]
 
 ---
 
+## 改行
+
+`echo.`
+
+``` batch
+@echo off
+
+echo Hello,World!
+echo.
+echo this is a new line.
+
+pause > nul
+```
+
+---
+
 ## コメントがエラーとなる
 
 文字化けする環境
