さんこうついいか

--- a/Article/おもしろ.md
+++ b/Article/おもしろ.md
@@ -19,3 +19,23 @@
 >宗教は初手が「信じる」だけど、科学は初手が「疑う」なので、もうこの時点で勝敗はついている。  
 一方、技術はいいぞ、初手が「祈る」だからな。  
 <https://twitter.com/ito_yusaku/status/1547114321846890496>
+
+---
+
+## ハエと鉄球
+
+永遠を表現する話として、地球ほどの鉄球とハエの話をどこかで聞いたことがあった。  
+地球ほどの鉄球があり、そこに１匹のハエがいる。  
+そのハエが鉄球を歩くと、極わずかであるが鉄球がすり減る。  
+数億年経過したとして、数ミリしか削れていないとしたら、そのハエが鉄球をすべて削りきるまでには一体どれほどの時間がかかるだろうか？  
+みたいな話だったが、一体どこで見たのか思い出せなかったが、ついに見つけたので記録する。  
+
+>「フェルマーの最終定理」  
+>サイモン・シン著 青木薫訳  
+>の中で無限の概念の説明に用いられています。  
+>
+>デイヴィッド・ロッジ「映画館の常連たち」より  
+>「この世界と同じくらい大きな鋼鉄の玉があり、一匹の蠅が百万年に一度その上に止まるものとしよう。  
+>鋼鉄の玉がすりへってすべてなくなったとき、永遠はまだはじまってもいないのだ」  
+>
+><https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q13211444588>  
