--- a/DB/SQLServer/構造関係/テーブル構造.md
+++ b/DB/SQLServer/構造関係/テーブル構造.md
@@ -67,4 +67,37 @@ AND    Object_ID = OBJECT_ID(N'[Database].[dbo].[Table]')
 
 ---
 
+## そのテーブルが存在するかどうかを調べるクエリ
+
+``` sql
+IF EXISTS (
+    SELECT *
+    FROM INFORMATION_SCHEMA.TABLES
+    WHERE TABLE_SCHEMA = 'スキーマ名' -- スキーマ名を指定するか、デフォルトの場合は'dbo'を使用します。
+    AND TABLE_NAME = 'テーブル名' -- 調べたいテーブル名を指定します。
+)
+BEGIN
+    PRINT 'テーブルが存在します。'
+END
+ELSE
+BEGIN
+    PRINT 'テーブルが存在しません。'
+END
+```
+
+``` sql
+SELECT
+    CASE
+        WHEN EXISTS (
+            SELECT 1
+            FROM データベース名.INFORMATION_SCHEMA.TABLES
+            WHERE TABLE_NAME = 'テーブル名' -- 調べたいテーブル名を指定します。
+        )
+        THEN 'Exists'
+        ELSE 'Nothing'
+    END AS TableStatus
+```
+
+---
+
 [SQLServerのDBの構造の差分調査](https://masalib.hatenablog.com/entry/2016/02/10/000000)  
