・yieldreturn ・イベントハンドラ ・ファクトリパターン

--- a/GoodCode_BadCode/6.条件分岐.md
+++ b/GoodCode_BadCode/6.条件分岐.md
@@ -1177,7 +1177,7 @@ classDiagram
     }
 
     class ExcellentCustomerPolicy {
-        add(rule : ExcellentCustomerRule void
+        add(rule : ExcellentCustomerRule) void
         complyWithAll(history : PurchaseHistory) boolean
     }
 
