--- a/Windows_Prompto/Batch/バッチ.md
+++ b/Windows_Prompto/Batch/バッチ.md
@@ -98,3 +98,24 @@ call cmd /k "Bundle.exe"
 ```
 
 [コマンドプロンプト cmd - [新しいインスタンスを開始する]](https://www.k-tanaka.net/cmd/cmd.php)  
+
+---
+
+## フォルダを削除する方法
+
+`rmdir` コマンド（別名 `rd` コマンド）を使用して行うことができます。  
+`rmdir` コマンドは、指定したディレクトリを削除します。  
+
+``` batch
+rmdir /s /q フォルダのパス
+```
+
+- /s は、指定されたディレクトリとそのサブディレクトリを削除するオプションです。  
+- /q は、確認プロンプトを表示せずに削除を行うオプションです。  
+- フォルダのパス は、削除するフォルダのパスを指定します。  
+
+例えば、C:\example_folder という名前のフォルダを削除する場合、次のように記述します。  
+
+``` batch
+rmdir /s /q C:\example_folder
+```
