ロールバックについて追記

--- a/DB/SQLServer/トランザクションとエラー/トランザクション.md
+++ b/DB/SQLServer/トランザクションとエラー/トランザクション.md
@@ -158,7 +158,7 @@ SQLServerではロールバック可能であることを確認した。
 他はDBによる模様。  
 ロールバック不可能なDBに関してはdrop tableやtruncate等のDDL(テーブル構造)命令は、RollBackが利かないらしい。  
 
-以下のクエリをコピペして実行するだけで検証可能。  
+サンプル1
 
 ``` sql
 DROP TABLE IF EXISTS employees;
@@ -185,4 +185,19 @@ END CATCH
 GO
 
 select * from employees
+```
+
+サンプル2
+
+``` sql
+BEGIN TRANSACTION;
+
+-- テーブルを作成
+CREATE TABLE test_table (id INT, name NVARCHAR(50));
+
+-- カラムを変更
+ALTER TABLE test_table ALTER COLUMN name NVARCHAR(100);
+
+-- ロールバックでカラムを元に戻す
+ROLLBACK TRANSACTION;
 ```
