・バッチ周り整理 ・他整理

--- a/Windows_Prompto/Batch/バッチ.md
+++ b/Windows_Prompto/Batch/バッチ.md
@@ -1,74 +1,5 @@
 # バッチまとめ
 
----
-
-## コメント
-
-``` batch
-rem [コメント]
-: [コメント]
-:: [コメント]
-```
-
-[バッチファイルでコメントを使用する](https://jj-blues.com/cms/wantto-usecommentout/)  
-
----
-
-## 改行
-
-`echo.`
-
-``` batch
-@echo off
-
-echo Hello,World!
-echo.
-echo this is a new line.
-
-pause > nul
-```
-
----
-
-## コメントがエラーとなる
-
-文字化けする環境
-
-- バッチファイルの文字コードがUTF-8  
-- 改行コードがCRLFになっている  
-- 日本語のような全角文字が含まれている  
-
-日本語版 Windows のコマンドプロンプトは Shift-JIS の文字コードを前提として動作させるようになっている模様。  
-なので、多くの場合は、文字コードを UTF-8 に明示すれば正常に動作するようになる。  
-
-■ **対処法1 文字コードをバッチ内で指定**
-
-バッチの先頭に以下のコマンドを追記
-
-`chcp 65001`
-
-`chcp`コマンドはバッチファイルの文字コードを明示するコマンド。  
-文字コードを明示した上で、後続の処理を実行させる。  
-
-|コードページ番号|文字コード|
-|---|---|
-|65001 | UTF-8     |
-|932   | Shift-JIS |
-|1200  | UTF-16    |
-
-■ **対処法2 remの内容をダブルクォーテーションで囲う**
-
-``` batch
-@echo off
-chcp 65001
-rem "あ"
-rem "あ"
-```
-
-[UTF-8のバッチファイルが文字化けする時の対処3選](https://nayutari.com/batch-utf8)  
-
----
-
 ## for文内で変数を利用する場合の注意
 
 forブロック内では基本的に変数は使えない。  
@@ -119,3 +50,25 @@ rmdir /s /q フォルダのパス
 ``` batch
 rmdir /s /q C:\example_folder
 ```
+
+---
+
+## バッチファイルでのカレントディレクトリ変更
+
+``` batch
+SET RUNPATH=%~dp0
+CD %RUNPATH%
+```
+
+このバッチファイルの命令は、スクリプト自体のディレクトリにカレントディレクトリを変更しています。  
+
+1. `SET RUNPATH=%~dp0`  
+   `%~dp0`は、バッチファイル自体のフルパスを表します。  
+   ここでは、`RUNPATH`という環境変数にバッチファイルのディレクトリパス（ドライブレターとパス）を代入しています。  
+
+2. `CD %RUNPATH%`  
+   この行は、カレントディレクトリをRUNPATHで指定されたディレクトリに変更しています。  
+   RUNPATHはバッチファイルのディレクトリパスを格納しているため、このコマンドによってカレントディレクトリがバッチファイルのディレクトリに変更されます。  
+
+この2行のコマンドにより、バッチファイルがどこから実行されても、その後の処理がバッチファイルと同じディレクトリを基準に実行されるようになります。  
+これは、特定のフォルダ内のファイルやサブディレクトリに依存する処理を行う場合に役立ちます。  
