・参考追加、整理

--- a/API/gRPC/メモ.md
+++ b/API/gRPC/メモ.md
@@ -5,6 +5,8 @@
 関数の引数が必要ない場合、`google/protobuf/empty.proto`をimportし、`google.protobuf.Empty`を引数に渡せば引数がないことを明示できるが、単純に`message Empty{}`を定義するだけで良い。  
 わざわざ面倒なことはしなくてよい。  
 
+### google.protobuf.Empty
+
 長いし面倒だし覚えていられない。  
 
 ``` proto
@@ -19,6 +21,8 @@ service User {
     rpc GetAllUsers (google.protobuf.Empty) returns (GetAllUsersResponse);
 }
 ```
+
+### message Empty
 
 これだけでいい。
 
