--- a/Article/技術力.md
+++ b/Article/技術力.md
@@ -33,11 +33,11 @@
 ## モダンな技術
 
 >モダンな技術を使っていない＝ダメな企業・組織なのか？  
-答えは「No」です。  
-「その時、ある情報・リソースで、適切な技術を選んで使う事」が一番の正解だと、私は思います。  
-_  
-確かに、転職市場では「モダンな技術を使用していれば、書類選考は通りやすい」かもしれません。  
-ですが、それよりもっと大切なのは 「所持している技術をきちんと使えるか？」「どのくらいの経験があるか」「人柄」などのソフトスキルだと思います。  
-ですので「モダンな技術を使用していないから、転職ができない」ということはありません。  
-寧ろ、企業側は「所持している技術をどこまで使えるか」だったり「チーム力」を重視していると思います。（自分自身が「この技術を使いたい！」という理由で転職活動している場合は、別ですが）  
-[「モダンな技術を使用する＝正解」とは限らない](https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d)  
+>答えは「No」です。  
+>「その時、ある情報・リソースで、適切な技術を選んで使う事」が一番の正解だと、私は思います。  
+>
+>確かに、転職市場では「モダンな技術を使用していれば、書類選考は通りやすい」かもしれません。  
+>ですが、それよりもっと大切なのは 「所持している技術をきちんと使えるか？」「どのくらいの経験があるか」「人柄」などのソフトスキルだと思います。  
+>ですので「モダンな技術を使用していないから、転職ができない」ということはありません。  
+>寧ろ、企業側は「所持している技術をどこまで使えるか」だったり「チーム力」を重視していると思います。（自分自身が「この技術を使いたい！」という理由で転職活動している場合は、別ですが）  
+>[「モダンな技術を使用する＝正解」とは限らない](https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d)  
