--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -3,6 +3,10 @@
 c# インターフェース DI
 [「DI使うとインタフェース地獄に陥るらしいから使いたくない」と言っていたA氏がインタフェースを使わずにDIで幸せになるまで - Qiita](https://qiita.com/jun1s/items/55b12c7febd7de6a0a45)  
 
+[Twitter](https://github.com/twitter/the-algorithm)  
+
+[Chapter0:本書について｜Flutter実践入門](https://zenn.dev/kazutxt/books/flutter_practice_introduction/viewer/01_chapter0_aboutme)  
+[フロントエンジニア（仮）がGO言語で簡単なスクレイピング処理を実装するまで - Qiita](https://qiita.com/kenalog210/items/3bc5319a399ec7ea6b97)  
 
 [出来らぁっ！と言わない為の工数見積もり術 - Qiita](https://qiita.com/wryu/items/96a11ded58cf62034e10)  
 
